Notices disclosure heading spacing fix.

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -704,13 +704,13 @@ body {
                 position: relative;
     	       	
     	       	a { display: block; position: relative; z-index: 900; height: 80px;
-        	       	.disclosure-title { position: absolute; top: 25%; width: 100%; }
+        	       	.disclosure-title { position: absolute; top: 50%; width: 100%; margin-top: -13px; }
     	       	}
     	       	
     	       	.disclosure-meta {  position: absolute; top: 50%; left: 0; right: 0; z-index: 1; line-height: 30px; margin-top: -15px;
         	       	
         	       	.disclosure-unread { background-color: #555555; font-weight: 300; font-size:1em; position: absolute; right: 25px; top: 5px; }
-        	       	.disclosure-critical { position: absolute; bottom: -20px; color: #888; }
+        	       	.disclosure-critical { position: absolute; bottom: -23px; color: #888; }
     	       	}
     	    }
     	    
@@ -719,7 +719,7 @@ body {
     			h3 { color: #af4b1a; }
     			
     			a {
-        		    .disclosure-title { top: 30%; }	
+        		    .disclosure-title { }	
     			}
     			
     			.disclosure-meta { 
